src/tlParser.py
# Generated from tl.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class tlParser ( Parser ):

    grammarFileName = "tl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "'int'", "'double'", 
                     "'boolean'", "'void'", "'{'", "'}'", "';'", "'='", 
                     "'++'", "'--'", "'return'", "'if'", "'else'", "'while'", 
                     "'||'", "'&&'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'false'", 
                     "'true'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "DOUBLE", "INTEGER", "ID", 
                      "STRING", "MULTINE_COMMENT", "INLINE_COMMENT", "WS" ]

    RULE_program = 0
    RULE_funclist = 1
    RULE_funcdef = 2
    RULE_paramlist = 3
    RULE_param = 4
    RULE_datatype = 5
    RULE_codeblock = 6
    RULE_stmtlist = 7
    RULE_stmt = 8
    RULE_loopstmt = 9
    RULE_initstmt = 10
    RULE_poststmt = 11
    RULE_var = 12
    RULE_expr = 13
    RULE_logical_or = 14
    RULE_logical_and = 15
    RULE_comparison = 16
    RULE_sum = 17
    RULE_product = 18
    RULE_unit = 19
    RULE_atom = 20
    RULE_args = 21
    RULE_number = 22
    RULE_e = 23

    ruleNames =  [ "program", "funclist", "funcdef", "paramlist", "param", 
                   "datatype", "codeblock", "stmtlist", "stmt", "loopstmt", 
                   "initstmt", "poststmt", "var", "expr", "logical_or", 
                   "logical_and", "comparison", "sum", "product", "unit", 
                   "atom", "args", "number", "e" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    DOUBLE=34
    INTEGER=35
    ID=36
    STRING=37
    MULTINE_COMMENT=38
    INLINE_COMMENT=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funclist(self):
            return self.getTypedRuleContext(tlParser.FunclistContext,0)


        def getRuleIndex(self):
            return tlParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = tlParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.funclist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunclistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tlParser.FuncdefContext)
            else:
                return self.getTypedRuleContext(tlParser.FuncdefContext,i)


        def getRuleIndex(self):
            return tlParser.RULE_funclist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunclist" ):
                listener.enterFunclist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunclist" ):
                listener.exitFunclist(self)




    def funclist(self):

        localctx = tlParser.FunclistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funclist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 50
                self.funcdef()
                self.state = 53 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 240) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def datatype(self):
            return self.getTypedRuleContext(tlParser.DatatypeContext,0)


        def ID(self):
            return self.getToken(tlParser.ID, 0)

        def paramlist(self):
            return self.getTypedRuleContext(tlParser.ParamlistContext,0)


        def codeblock(self):
            return self.getTypedRuleContext(tlParser.CodeblockContext,0)


        def getRuleIndex(self):
            return tlParser.RULE_funcdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdef" ):
                listener.enterFuncdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdef" ):
                listener.exitFuncdef(self)




    def funcdef(self):

        localctx = tlParser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcdef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.datatype()
            self.state = 56
            self.match(tlParser.ID)
            self.state = 57
            self.match(tlParser.T__0)
            self.state = 58
            self.paramlist()
            self.state = 59
            self.match(tlParser.T__1)
            self.state = 60
            self.codeblock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(tlParser.ParamContext,0)


        def paramlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tlParser.ParamlistContext)
            else:
                return self.getTypedRuleContext(tlParser.ParamlistContext,i)


        def e(self):
            return self.getTypedRuleContext(tlParser.EContext,0)


        def getRuleIndex(self):
            return tlParser.RULE_paramlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamlist" ):
                listener.enterParamlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamlist" ):
                listener.exitParamlist(self)




    def paramlist(self):

        localctx = tlParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paramlist)
        try:
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.param()
                self.state = 67
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 63
                        self.match(tlParser.T__2)
                        self.state = 64
                        self.paramlist() 
                    self.state = 69
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                pass
            elif token in [2, 3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.e()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def datatype(self):
            return self.getTypedRuleContext(tlParser.DatatypeContext,0)


        def ID(self):
            return self.getToken(tlParser.ID, 0)

        def getRuleIndex(self):
            return tlParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = tlParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.datatype()
            self.state = 74
            self.match(tlParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DatatypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tlParser.RULE_datatype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatatype" ):
                listener.enterDatatype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatatype" ):
                listener.exitDatatype(self)




    def datatype(self):

        localctx = tlParser.DatatypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_datatype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 240) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmtlist(self):
            return self.getTypedRuleContext(tlParser.StmtlistContext,0)


        def getRuleIndex(self):
            return tlParser.RULE_codeblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCodeblock" ):
                listener.enterCodeblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCodeblock" ):
                listener.exitCodeblock(self)




    def codeblock(self):

        localctx = tlParser.CodeblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_codeblock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(tlParser.T__7)
            self.state = 79
            self.stmtlist()
            self.state = 80
            self.match(tlParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tlParser.StmtContext)
            else:
                return self.getTypedRuleContext(tlParser.StmtContext,i)


        def getRuleIndex(self):
            return tlParser.RULE_stmtlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtlist" ):
                listener.enterStmtlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtlist" ):
                listener.exitStmtlist(self)




    def stmtlist(self):

        localctx = tlParser.StmtlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmtlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 272864822770) != 0):
                self.state = 82
                self.stmt()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def codeblock(self):
            return self.getTypedRuleContext(tlParser.CodeblockContext,0)


        def datatype(self):
            return self.getTypedRuleContext(tlParser.DatatypeContext,0)


        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tlParser.VarContext)
            else:
                return self.getTypedRuleContext(tlParser.VarContext,i)


        def ID(self):
            return self.getToken(tlParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(tlParser.ExprContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tlParser.StmtContext)
            else:
                return self.getTypedRuleContext(tlParser.StmtContext,i)


        def loopstmt(self):
            return self.getTypedRuleContext(tlParser.LoopstmtContext,0)


        def initstmt(self):
            return self.getTypedRuleContext(tlParser.InitstmtContext,0)


        def poststmt(self):
            return self.getTypedRuleContext(tlParser.PoststmtContext,0)


        def getRuleIndex(self):
            return tlParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = tlParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(tlParser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.codeblock()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.datatype()
                self.state = 91
                self.var()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 92
                    self.match(tlParser.T__2)
                    self.state = 93
                    self.var()
                    self.state = 98
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 99
                self.match(tlParser.T__9)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 101
                self.match(tlParser.ID)
                self.state = 102
                self.match(tlParser.T__10)
                self.state = 103
                self.expr()
                self.state = 104
                self.match(tlParser.T__9)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                self.match(tlParser.ID)
                self.state = 107
                self.match(tlParser.T__11)
                self.state = 108
                self.match(tlParser.T__9)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 109
                self.match(tlParser.ID)
                self.state = 110
                self.match(tlParser.T__12)
                self.state = 111
                self.match(tlParser.T__9)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 112
                self.match(tlParser.T__13)
                self.state = 113
                self.match(tlParser.T__9)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 114
                self.match(tlParser.T__13)
                self.state = 115
                self.expr()
                self.state = 116
                self.match(tlParser.T__9)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 118
                self.match(tlParser.T__14)
                self.state = 119
                self.match(tlParser.T__0)
                self.state = 120
                self.expr()
                self.state = 121
                self.match(tlParser.T__1)
                self.state = 122
                self.stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 124
                self.match(tlParser.T__14)
                self.state = 125
                self.match(tlParser.T__0)
                self.state = 126
                self.expr()
                self.state = 127
                self.match(tlParser.T__1)
                self.state = 128
                self.stmt()
                self.state = 129
                self.match(tlParser.T__15)
                self.state = 130
                self.stmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 132
                self.expr()
                self.state = 133
                self.match(tlParser.T__9)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 135
                self.loopstmt()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 136
                self.initstmt()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 137
                self.poststmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(tlParser.ExprContext,0)


        def stmt(self):
            return self.getTypedRuleContext(tlParser.StmtContext,0)


        def getRuleIndex(self):
            return tlParser.RULE_loopstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopstmt" ):
                listener.enterLoopstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopstmt" ):
                listener.exitLoopstmt(self)




    def loopstmt(self):

        localctx = tlParser.LoopstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_loopstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(tlParser.T__16)
            self.state = 141
            self.match(tlParser.T__0)
            self.state = 142
            self.expr()
            self.state = 143
            self.match(tlParser.T__1)
            self.state = 144
            self.stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def datatype(self):
            return self.getTypedRuleContext(tlParser.DatatypeContext,0)


        def ID(self):
            return self.getToken(tlParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(tlParser.ExprContext,0)


        def getRuleIndex(self):
            return tlParser.RULE_initstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitstmt" ):
                listener.enterInitstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitstmt" ):
                listener.exitInitstmt(self)




    def initstmt(self):

        localctx = tlParser.InitstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_initstmt)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.datatype()
                self.state = 147
                self.match(tlParser.ID)
                self.state = 148
                self.match(tlParser.T__10)
                self.state = 149
                self.expr()
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(tlParser.ID)
                self.state = 152
                self.match(tlParser.T__10)
                self.state = 153
                self.expr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PoststmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(tlParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(tlParser.ExprContext,0)


        def getRuleIndex(self):
            return tlParser.RULE_poststmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPoststmt" ):
                listener.enterPoststmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPoststmt" ):
                listener.exitPoststmt(self)




    def poststmt(self):

        localctx = tlParser.PoststmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_poststmt)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(tlParser.ID)
                self.state = 157
                self.match(tlParser.T__10)
                self.state = 158
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.match(tlParser.ID)
                self.state = 160
                self.match(tlParser.T__11)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.match(tlParser.ID)
                self.state = 162
                self.match(tlParser.T__12)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(tlParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(tlParser.ExprContext,0)


        def getRuleIndex(self):
            return tlParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)




    def var(self):

        localctx = tlParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_var)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.match(tlParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.match(tlParser.ID)
                self.state = 167
                self.match(tlParser.T__10)
                self.state = 168
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(tlParser.AtomContext,0)


        def unit(self):
            return self.getTypedRuleContext(tlParser.UnitContext,0)


        def sum_(self):
            return self.getTypedRuleContext(tlParser.SumContext,0)


        def comparison(self):
            return self.getTypedRuleContext(tlParser.ComparisonContext,0)


        def logical_and(self):
            return self.getTypedRuleContext(tlParser.Logical_andContext,0)


        def logical_or(self):
            return self.getTypedRuleContext(tlParser.Logical_orContext,0)


        def STRING(self):
            return self.getToken(tlParser.STRING, 0)

        def getRuleIndex(self):
            return tlParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = tlParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expr)
        try:
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.atom()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.unit()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 173
                self.sum_()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 174
                self.comparison()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 175
                self.logical_and()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 176
                self.logical_or()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 177
                self.match(tlParser.STRING)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_orContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(tlParser.AtomContext,0)


        def unit(self):
            return self.getTypedRuleContext(tlParser.UnitContext,0)


        def sum_(self):
            return self.getTypedRuleContext(tlParser.SumContext,0)


        def comparison(self):
            return self.getTypedRuleContext(tlParser.ComparisonContext,0)


        def logical_and(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tlParser.Logical_andContext)
            else:
                return self.getTypedRuleContext(tlParser.Logical_andContext,i)


        def getRuleIndex(self):
            return tlParser.RULE_logical_or

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_or" ):
                listener.enterLogical_or(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_or" ):
                listener.exitLogical_or(self)




    def logical_or(self):

        localctx = tlParser.Logical_orContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_logical_or)
        self._la = 0 # Token type
        try:
            self.state = 192
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.atom()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.unit()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 182
                self.sum_()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 183
                self.comparison()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 184
                self.logical_and()
                self.state = 189
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==18:
                    self.state = 185
                    self.match(tlParser.T__17)
                    self.state = 186
                    self.logical_and()
                    self.state = 191
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_andContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(tlParser.AtomContext,0)


        def unit(self):
            return self.getTypedRuleContext(tlParser.UnitContext,0)


        def sum_(self):
            return self.getTypedRuleContext(tlParser.SumContext,0)


        def comparison(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tlParser.ComparisonContext)
            else:
                return self.getTypedRuleContext(tlParser.ComparisonContext,i)


        def getRuleIndex(self):
            return tlParser.RULE_logical_and

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_and" ):
                listener.enterLogical_and(self)
